# llm-kata

./: .gitignore
llm-in-action-101/: llm_in_action_101_01.ipynb  pyproject.toml
training-gpt2/: incemehmet-1-4.txt  incemehmet-1.txt  song_texts.txt
